--- a/templates/admin/admin_header.html
+++ b/templates/admin/admin_header.html
@@ -137,25 +137,30 @@
                                     </nav>
                                 </div>
 
-                        <!-- Cuisine Section -->
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseCuisine" aria-expanded="false" aria-controls="collapseKitchens">
-                            <div class="sb-nav-link-icon"><i class="fas fa-pizza-slice"></i></div>
-                            Food & Dining
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
-                        <div class="collapse" id="collapseCuisine" aria-labelledby="headingFour" data-bs-parent="#sidenavAccordion">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link collapsed" href="{{ url_for('cuisine.add_cuisine') }}">
-                                    Add Cuisine
+                                <!-- Cuisine Section -->
+                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseCuisine" aria-expanded="false" aria-controls="collapseKitchens">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-pizza-slice"></i></div>
+                                    Food & Dining
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
-                            </nav>
-                        </div>
-                        </div>
-                        
-                        <div class="sb-sidenav-footer">
-                            <div class="small">Logged in as:</div>
-                            {{ role }}
-                        </div>
+                                <div class="collapse" id="collapseCuisine" aria-labelledby="headingFour" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link collapsed" href="{{ url_for('cuisine.add_cuisine') }}">
+                                            Add Cuisine
+                                        </a>
+                                    </nav>
+                                </div>
+                                <a class="nav-link collapsed" href="{{ url_for('royalty.add_royalty') }}" aria-controls="collapseKitchens">
+                                    <div class="sb-nav-link-icon"><img src="{{ url_for('static', filename='images/Pi7_royalties.png') }}" alt="Royalty Sharing Icon" style="width: 24px; height: 24px; margin-left: -9px;"></i></div>
+                                    Royalty Sharing
+                                    <div class=""></i></div>
+                                </a>
+                                </div>
+                                
+                                <div class="sb-sidenav-footer">
+                                    <div class="small">Logged in as:</div>
+                                    {{ role }}
+                                </div>
+                            </div>
+                        </nav>
                     </div>
-                </nav>
-            </div>
